# Te-Audio

./: CMakeLists.txt  README.md
libs/: cmrc.hpp
libs/raylib-4.1/src/extras/: gui_textbox_extended.h  raygui.h
skins/: audio interQT1.png - Ярлык.lnk
src/: ButtonsProcessor.h  Events.h  ResourceLoader.hpp  audiof.h  darkstyle.h  main.cpp  settings.h
